@@ -56,9 +56,10 @@ struct {
    	unsigned short idVendor;
    	unsigned short idProduct;
 } models[] = {
-        {"American Idol Keychain Camera", GP_DRIVER_STATUS_EXPERIMENTAL, 
+        {"American Idol Keychain Camera", GP_DRIVER_STATUS_TESTING, 
     							    0x0979, 0x0224},
-        {"NogaNet TDC-15", GP_DRIVER_STATUS_EXPERIMENTAL, 0x0979, 0x0224},
+        {"NogaNet TDC-15", GP_DRIVER_STATUS_TESTING, 0x0979, 0x0224},
+        {"Cobra DC-125", GP_DRIVER_STATUS_EXPERIMENTAL, 0x0979, 0x0224},
 	{NULL,0,0,0}
 };
 
